chap_topic/log/build_2025-01-27_21-48-19/demo_python_topic/stderr.log
  File "/mnt/c/Users/wufy/Desktop/learn_ros2/learn_ros2/chap_topic/install/demo_python_topic/lib/python3.10/site-packages/demo_python_topic/novel_pub_node.py", line 7
    form queue import Queue
         ^^^^^
SyntaxError: invalid syntax

